# llm-gpt-summarizer

./: .env  Dockerfile  pyproject.toml
app/: app.py  config.py  debug_tools.py  env.py  generate_data.py  llm_handler.py  log_tools.py  main.py  recursive_summary.py
app/data_types/: summary.py
app/services/: anthropic_connector.py  openai_connector.py
app/ui/: render.py
outputs/: pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708141145.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708141310.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708141553.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708142321.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708145434.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708150314.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708165539.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230708174531.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230710043725.txt  pCheck_out_what_weve_been_up_to_in_our_latest_Patreon_update_Thank_you_to_our_patrons_for_making_it__20230711185212.txt
(+5 files in other folders)
